# py16

./: .gitignore  AI_CHEATSHEET.md  AI_Cheatsheet(OS_apps).md  CHANGELOG.md  README.md  README_en.md  blend_demo.py  boot_cart.py  demo.py  parallax_demo.py  particles_demo.py  pong.py  py16os.py  py16os_cart.py  pyproject.toml  requirements-optional.txt  snake.py  theme.json
ai_cheatsheets/: ai_cheatsheet(.p16img).md  ai_cheatsheet(py16OS_apps).md  p16canvas_cheatsheet.md
apps/: README(appstore).md  appstore.p16img  appstore.py  example.py  krypto.py
apps/appstore/: __init__.py  build.py  config.py  controller.py  helpers.py  p16canvas.p16img  p16mov.p16img  p16sheet.p16img  pdf.p16img  state.py  tasks.py  views.py
demos/: mode7_demo.py  pong2p.py  scanlines_demo.py  snake.py  splitscreen_demo.py  win0_8.py
lang/: da.json  de.json  es.json  fi.json  fr.json  ht.json  hu.json  nl.json  pl.json  pt.json  ro.json  sr.json  sv.json
py16/: __init__.py  __main__.py  audio.py  bios.py  cart.py  cart_covers.py  cart_pdf.py  cart_runtime.py  code_editor.py  config.py  controller.py  core.py  demo.py  editor_pdf.py  editor_samples.py  editors.py  editors_audio.py  gemini-destop0.1.py  graphics.py  input.py  maps.py  mathx.py  mode7.py  mode7_effects.py  particles.py  pdf_export.py  recording.py  samples.py  scanlines.py  sfx_data.py  splitscreen.py  sprites.py  state.py  tracker.py
wallpapers/: wallpaper_py16.p16canvas
